# execvars

./: CMakeLists.txt  README.md
src/: execvars.c
test/: execvars.json  vars.json
